--- a/api-spec/redirection/redirect-api.yaml
+++ b/api-spec/redirection/redirect-api.yaml
@@ -2,7 +2,11 @@ openapi: 3.0.0
 info:
   version: 0.0.1
   title: Pagopa Redirect
-  description: Collection of all api used for perform a transaction using redirect payment instrument
+  description: >
+    Collection of all api used for perform a transaction using redirect payment instrument.
+    Api's are tagged as follow:
+      * `b2b - PSP side` are implemented and exposed by PSP to expose api's  to p retrieve redirection URL and perform refund
+      * `b2b - pagoPA side` are implemented and exposed by pagoPA to receive authorization outcome
   contact:
     name: pagoPA - Touchpoints team
 tags:
@@ -13,11 +17,14 @@ tags:
 servers:
   - url: https://${host}
 externalDocs:
-  url: https://docs.pagopa.it/sanp/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/integrazione-per-strumento-di-pagamento-tramite-redirect#api-recupero-url
+  url: https://docs.pagopa.it/sanp/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/integrazione-per-strumento-di-pagamento-tramite-redirect
   description: SANP
 paths:
-  /redirections/url:
+  /redirections:
     post:
+      externalDocs:
+        url: https://docs.pagopa.it/sanp/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/integrazione-per-strumento-di-pagamento-tramite-redirect#api-recupero-url
+        description: Api recupero URL (SANP)
       tags:
         - b2b - PSP side
       operationId: RetrieveRedirectUrl
@@ -26,11 +33,7 @@ paths:
       security:
         - PspApiKeyAuth: []
       requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/RedirectUrlRequest'
-
+        $ref: '#/components/requestBodies/RedirectUrlRequest'
       responses:
         '200':
           description: Redirect url response
@@ -68,28 +71,21 @@ paths:
                 status: 500
                 detail: There was an error processing the request
                 idTransaction: 3fa85f6457174562b3fc2c963f66afa6
-  /transactions/{idTransaction}/redirections/{idPSPTransaction}:
-    delete:
+  /redirections/refunds:
+    post:
+      externalDocs:
+        url:  https://docs.pagopa.it/sanp/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/integrazione-per-strumento-di-pagamento-tramite-redirect#api-annullo
+        description: Api annullo (SANP)
       tags:
         - b2b - PSP side
       operationId: RefundTransaction
       summary: Api for refund
-      description: Perform a refund for a transaction
+      description: DELETE with body - Perform a refund for a transaction
       security:
         - PspApiKeyAuth: []
-      parameters:
-        - in: path
-          name: idTransaction
-          schema:
-            $ref: '#/components/schemas/PagopaIdTransaction'
-          required: true
-          description: "PagoPA unique identifier of the transaction to be refund (the same given in the redirections/url request)"
-        - in: path
-          name: idPSPTransaction
-          schema:
-            type: string
-          required: true
-          description: "PSP unique ID of the transaction to be refund (the same returned in the redirections/url response)"
+      requestBody:
+        $ref: '#/components/requestBodies/RefundRequest'
+
       responses:
         '200':
           description: Redund response
@@ -137,8 +133,11 @@ paths:
                 status: 500
                 detail: There was an error processing the request
                 idTransaction: 3fa85f6457174562b3fc2c963f66afa6
-  /transactions/{idTransaction}/redirections/{idPSPTransaction}/outcomes:
+  /redirections/{idTransaction}/outcomes:
     post:
+      externalDocs:
+        url: https://docs.pagopa.it/sanp/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/integrazione-per-strumento-di-pagamento-tramite-redirect#api-callback-esito-transazione
+        description: Api callback esito transazione (SANP)
       tags:
         - b2b - pagoPA side
       operationId: CallbackOutcome
@@ -152,18 +151,9 @@ paths:
           schema:
             $ref: '#/components/schemas/PagopaIdTransaction'
           required: true
-          description: "PagoPA unique identifier of the transaction to be refund (the same given in the redirections/url request)"
-        - in: path
-          name: idPSPTransaction
-          schema:
-            type: string
-          required: true
-          description: "PSP unique ID of the transaction to be refund (the same returned in the redirections/url response)"
+          description: PagoPA unique identifier of the transaction to be refund (the same given in the redirections/url request)
       requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/TransactionResultRequest'
+        $ref: '#/components/requestBodies/TransactionResultRequest'
       responses:
         '200':
           description: Outcome response
@@ -211,7 +201,6 @@ paths:
                 status: 500
                 detail: There was an error processing the request
                 idTransaction: 3fa85f6457174562b3fc2c963f66afa6
-
 components:
   schemas:
     ProblemJson:
@@ -279,7 +268,8 @@ components:
         paymentMethod:
           description: Redirect payment method type
           type: string
-          enum: [BANK_ACCOUNT]
+          enum:
+            - BANK_ACCOUNT
         paName:
           description: Name of the payment notice issuer
           type: string
@@ -375,13 +365,8 @@ components:
           description: Unique PSP transaction identifier
         outcome:
           $ref: '#/components/schemas/AuthorizationOutcome'
-        timestampOperation:
-          type: string
-          format: date-time
-          description: Payment date and time, to be valued only for OK authorizations
-        authorizationCode:
-          type: string
-          description: Unique PSP authorization code, to be valued only for OK authorizations
+        details:
+          $ref: '#/components/schemas/TransactionResultDetails'
         errorCode:
           type: string
           description: Authorization error code, to be valued only for KO authorizations
@@ -389,6 +374,42 @@ components:
         - idPsp
         - idPSPTransaction
         - outcome
+    TransactionResultDetails:
+      type: object
+      oneOf:
+        - $ref: '#/components/schemas/TransactionAuthorizedOutcomeDetails'
+        - $ref: '#/components/schemas/TransactionDeniedOutcomeDetails'
+      discriminator:
+        propertyName: outcome
+        mapping:
+          OK: '#/components/schemas/TransactionAuthorizedOutcomeDetails'
+          KO: '#/components/schemas/TransactionDeniedOutcomeDetails'
+          CANCELED: '#/components/schemas/TransactionDeniedOutcomeDetails'
+          EXPIRED: '#/components/schemas/TransactionDeniedOutcomeDetails'
+          ERROR: '#/components/schemas/TransactionDeniedOutcomeDetails'
+
+    TransactionAuthorizedOutcomeDetails:
+      type: object
+      properties:
+        timestampOperation:
+          type: string
+          format: date-time
+          description: Payment date and time
+        authorizationCode:
+          type: string
+          description: Unique PSP authorization code
+      required:
+        - timestampOperation
+        - authorizationCode
+    TransactionDeniedOutcomeDetails:
+      type: object
+      properties:
+        errorCode:
+          type: string
+          description: Authorization error code
+      required:
+        - errorCode
+
     TransactionResultResponse:
       description: Callback api transaction outcome response body
       type: object
@@ -422,6 +443,26 @@ components:
         The outcome can assume the following values:
         * OK -> callback request have been processed successfully
         * KO -> there was an error processing the callback request
+    RefundRequest:
+      type: object
+      properties:
+        idTransaction:
+          $ref: '#/components/schemas/PagopaIdTransaction'
+        idPSPTransaction:
+          description: PSP transaction id
+          type: string
+        action:
+          description: Requested action (i.e. refund)
+          type: string
+      required:
+        - idTransaction
+        - idPSPTransaction
+        - action
+      example:
+        idTransaction: 3fa85f6457174562b3fc2c963f66afa6
+        idPSPTransaction: idPSPTransaction
+        action: refund
+
   requestBodies:
     RedirectUrlRequest:
       required: true
@@ -429,6 +470,35 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/RedirectUrlRequest'
+    RefundRequest:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/RefundRequest'
+    TransactionResultRequest:
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/TransactionResultRequest'
+          examples:
+            authorization outcome OK:
+              value:
+                idPsp: idPsp
+                idPSPTransaction: idPSPTransaction
+                outcome: OK
+                details:
+                  timestampOperation: '2024-01-12T11:59:40.873Z'
+                  authorizationCode: authorizationCode
+            authorization outcome KO:
+              value:
+                idPsp: idPsp
+                idPSPTransaction: idPSPTransaction
+                outcome: OK
+                details:
+                  errorCode: errorCode
+
   securitySchemes:
     PspApiKeyAuth:
       type: apiKey
