--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -51,6 +51,7 @@ microservice-chart:
       memory: "512Mi"
       cpu: "300m"
   autoscaling:
+    enable: false
     minReplica: 1
     maxReplica: 2
     pollingInterval: 30 # seconds
