--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -51,9 +51,9 @@ microservice-chart:
       memory: "512Mi"
       cpu: "300m"
   autoscaling:
-    enable: true
+    enable: false
     minReplica: 1
-    maxReplica: 2
+    maxReplica: 1
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
