--- a/pom.xml
+++ b/pom.xml
@@ -508,6 +508,8 @@
                     <connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
                     <scmVersionType>tag</scmVersionType>
                     <scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
+                    <scmVersionType>branch</scmVersionType>
+                    <scmVersion>CHK-2369-add-new-closure-requested-event</scmVersion>
                     <goals>install -DskipTests</goals>
                 </configuration>
                 <executions>
