--- a/api-spec/client/openapi/redirect/redirect-api.yaml
+++ b/api-spec/client/openapi/redirect/redirect-api.yaml
@@ -49,7 +49,7 @@ paths:
                 $ref: '#/components/schemas/ProblemJson'
               example:
                 status: 400
-                detail: Bad reqeuest
+                detail: Bad request
                 idTransaction: 3fa85f6457174562b3fc2c963f66afa6
         '401':
           description: Unauthorized
@@ -152,8 +152,6 @@ components:
         idPaymentMethod:
           description: Redirect payment method type
           type: string
-          enum:
-            - BANK_ACCOUNT
       required:
         - idTransaction
         - idPsp
@@ -168,10 +166,10 @@ components:
         amount: 99999999
         urlBack: https://psp.site/payment
         description: payment description
-        paymentMethod: BANK_ACCOUNT
+        idPaymentMethod: RBPIC
         touchpoint: CHECKOUT
         paName: paName
-        idPaymentMethod: f40ccb17-3b0b-43d2-942a-2686eb121c6a
+        paymentMethod: Pago in Conto Intesa
     RedirectUrlResponse:
       description: Redirect URL response
       type: object
