--- a/api-spec/v1/transactions-api.yaml
+++ b/api-spec/v1/transactions-api.yaml
@@ -172,7 +172,7 @@ paths:
           name: x-pgs-id
           schema:
             type: string
-            pattern: 'XPAY|VPOS|NPG|REDIRECT'
+            pattern: 'NPG|REDIRECT'
           required: false
           description: Pgs identifier (populated by APIM policy)
       requestBody:
@@ -473,7 +473,6 @@ components:
         details:
           description: Additional payment authorization details. Must match the correct format for the chosen payment method.
           oneOf:
-            - $ref: "#/components/schemas/CardAuthRequestDetails"
             - $ref: "#/components/schemas/CardsAuthRequestDetails"
             - $ref: "#/components/schemas/WalletAuthRequestDetails"
             - $ref: "#/components/schemas/ApmAuthRequestDetails"
@@ -481,7 +480,6 @@ components:
           discriminator:
             propertyName: detailType
             mapping:
-              card: "#/components/schemas/CardAuthRequestDetails"
               cards: "#/components/schemas/CardsAuthRequestDetails"
               wallet: "#/components/schemas/WalletAuthRequestDetails"
               apm: "#/components/schemas/ApmAuthRequestDetails"
@@ -495,57 +493,6 @@ components:
         - language
         - details
         - isAllCCP
-    CardAuthRequestDetails:
-      type: object
-      description: Additional payment authorization details for credit cards
-      properties:
-        detailType:
-          description: property discriminator, used to discriminate the authorization request detail. Fixed value 'card'
-          type: string
-        cvv:
-          type: string
-          description: Credit card CVV
-          pattern: "^[0-9]{3,4}$"
-        pan:
-          type: string
-          description: Credit card PAN
-          pattern: "^[0-9]{14,16}$"
-        expiryDate:
-          type: string
-          description: Credit card expiry date. The date format is `YYYYMM`
-          pattern: '^\d{6}$'
-        holderName:
-          type: string
-          description: The card holder name
-        brand:
-          type: string
-          description: The card brand name
-          enum:
-            - VISA
-            - MASTERCARD
-            - UNKNOWN
-            - DINERS
-            - MAESTRO
-            - AMEX
-        threeDsData:
-          type: string
-          description: The 3ds data evaluated by the client
-      required:
-        - detailType
-        - cvv
-        - pan
-        - expiryDate
-        - holderName
-        - brand
-        - threeDsData
-      example:
-        detailType: "card"
-        cvv: "000"
-        pan: "0123456789012345"
-        expiryDate: "209901"
-        holderName: "Name Surname"
-        brand: "VISA"
-        threeDsData: "threeDsData"
     CardsAuthRequestDetails:
       type: object
       description: Additional payment authorization details for cards NPG authorization
@@ -624,15 +571,11 @@ components:
         outcomeGateway:
           type: object
           oneOf:
-            - $ref: '#/components/schemas/OutcomeVposGateway'
-            - $ref: '#/components/schemas/OutcomeXpayGateway'
             - $ref: '#/components/schemas/OutcomeNpgGateway'
             - $ref: '#/components/schemas/OutcomeRedirectGateway'
           discriminator:
             propertyName: paymentGatewayType
             mapping:
-              XPAY: "#/components/schemas/OutcomeXpayGateway"
-              VPOS: "#/components/schemas/OutcomeVposGateway"
               NPG: '#/components/schemas/OutcomeNpgGateway'
               REDIRECT: '#/components/schemas/OutcomeRedirectGateway'
         timestampOperation:
@@ -718,7 +661,7 @@ components:
               $ref: "#/components/schemas/AmountEuroCents"
             gateway:
               type: string
-              example: 'XPAY'
+              example: 'NPG'
             sendPaymentResultOutcome:
               type: string
               enum:
@@ -1075,102 +1018,6 @@ components:
         - PPT_STAZIONE_INT_PA_IRRAGGIUNGIBILE
         - PPT_STAZIONE_INT_PA_SERVIZIO_NONATTIVO
         - GENERIC_ERROR
-    OutcomeVposGateway:
-      type: object
-      properties:
-        paymentGatewayType:
-          type: string
-          example: 'VPOS'
-        outcome:
-          type: string
-          enum:
-            - OK
-            - KO
-        rrn:
-          type: string
-        authorizationCode:
-          type: string
-        errorCode:
-          type: string
-          description: error code received from Vpos - https://github.com/pagopa/pagopa-wisp2.0-pp-server/blob/ff0e8e3354fc11d296fe5547b9b00941ead64e96/pp-server/pp-dto/src/main/java/com/pagopa/utils/VposResultCodeEnum.java
-          enum:
-            - '00'
-            - '01'
-            - '02'
-            - '03'
-            - '04'
-            - '05'
-            - '06'
-            - '07'
-            - '08'
-            - '09'
-            - '10'
-            - '11'
-            - '12'
-            - '13'
-            - '16'
-            - '17'
-            - '20'
-            - '21'
-            - '25'
-            - '26'
-            - '35'
-            - '37'
-            - '38'
-            - '40'
-            - '41'
-            - '50'
-            - '51'
-            - '98'
-            - '99'
-      required:
-        - paymentGatewayType
-        - outcome
-    OutcomeXpayGateway:
-      type: object
-      properties:
-        paymentGatewayType:
-          type: string
-          example: 'XPAY'
-        outcome:
-          type: string
-          enum:
-            - OK
-            - KO
-        authorizationCode:
-          type: string
-        errorCode:
-          type: number
-          description: error code received from XPay - https://ecommerce.nexi.it/specifiche-tecniche/tabelleecodifiche/codicierroreapirestful.html
-          enum:
-            - 1
-            - 2
-            - 3
-            - 4
-            - 5
-            - 7
-            - 8
-            - 9
-            - 12
-            - 13
-            - 14
-            - 15
-            - 16
-            - 17
-            - 18
-            - 19
-            - 20
-            - 21
-            - 22
-            - 50
-            - 96
-            - 97
-            - 98
-            - 99
-            - 100
-      required:
-        - paymentGatewayType
-        - outcome
     OutcomeNpgGateway:
       type: object
       properties:
